fixed input type

--- a/ping-coming-soon-page-master/index.html
+++ b/ping-coming-soon-page-master/index.html
@@ -27,7 +27,7 @@
         Subscribe and get notified
       </h4>
       <form onsubmit="return false" class="form">
-        <input type="text" name="input" id="input"  placeholder="Your email address...">
+        <input type="email" name="input" id="input"  placeholder="Your email address...">
         <button id="button">Notify Me</button>
         <label for="input" id="label" >Please provide a valid email address</label>
       </form>
